...
                Spacer()
                
                if viewPosts {
                    NavigationLink(
                        destination: PostsView(user: user),
                        label: {
                            Text("VER PUBLICACIONES")
                                .foregroundColor(.darkGreen)
                                .padding(.vertical)
                        })
                }
            }
        }
...
